<resources>
    <string name="app_name">module</string>
    <string name="news">资讯</string>
    <string name="tea">早午茶</string>
    <string name="afternoon_tea">下午茶</string>
    <string name="morning_tea">早茶</string>
    <string name="previous_tea">往期早午茶</string>
    <string name="few_content">/%1$d篇内容</string>
    <string name="pieces">%1$d张</string>
    <string name="classify">分类</string>
    <string name="explore">探索</string>
    <string name="music">音乐</string>
    <string name="garbage_classification2">垃圾分类</string>
    <string name="hitokoto_title">一言</string>
    <string name="fool_robot">智障机器人</string>
    <string name="chat_input_tip">请输入聊天内容</string>
    <string name="chat">聊天</string>
    <string name="poetry">诗词</string>
    <string name="a">一首</string>
    <string name="original">原文</string>
    <string name="title">标题</string>
    <string name="author">作者</string>
    <string name="search">搜索</string>
    <string name="poem_search_tip">请输入关键词</string>
    <string name="today_poem">今日荐诗</string>
    <string name="green_tea">清茶</string>
    <string name="all">全部</string>
    <string name="soulposion">毒鸡汤</string>
    <string name="anim">动画</string>
    <string name="comic">漫画</string>
    <string name="game">游戏</string>
    <string name="novel">小说</string>
    <string name="myself">原创</string>
    <string name="internet">网络</string>
    <string name="other">其他</string>
    <string name="kaiyan">开眼</string>
    <string name="garbage_classification">🌶️🐔分类</string>
    <string name="query">你是什么🌶️🐔?</string>
    <string name="belong">属于</string>
    <string name="garbage_input_hint">请输入你要查询的🌶️🐔</string>
    <string name="recyclable_concept_title">可回收物是指</string>
    <string name="recyclable_concept_content">适宜回收利用和资源化 利用的，如：玻、金、 塑、纸、衣</string>
    <string name="recyclable_include_title">可回收物主要包括</string>
    <string name="recyclable_include_content">酱油瓶、玻璃杯、平板玻璃、易拉罐、饮料瓶、洗发水瓶、塑料玩具、书本、报纸、广告单、纸板箱、衣服、床上用品等</string>
    <string name="recyclable_standard_title">可回收物投放要求</string>
    <string name="recyclable_standard_content">轻投轻放、清洁干燥、避免污染、废纸尽量平整、立体包装物请清空内容物，清洁后压扁投放、有尖锐边角的，应包裹后投放</string>
    <string name="dry_concept_title">干垃圾是指</string>
    <string name="dry_concept_content">除有害垃圾、可回收 物、湿垃圾以外的其他 生活废弃物</string>
    <string name="dry_include_title">干垃圾主要包括</string>
    <string name="dry_include_content">餐盒、餐巾纸、湿纸巾、卫生间用纸、塑料袋、食品包装袋、污染严重的纸、烟蒂、纸尿裤、一次性杯子、大骨头、贝壳、花盆、陶瓷等</string>
    <string name="dry_standard_title">干垃圾投放要求</string>
    <string name="dry_standard_content">尽量沥干水分；难以辨识类别的生活垃圾投入干垃圾容器内</string>
    <string name="wet_concept_title">湿垃圾是指</string>
    <string name="wet_concept_content">日常生活垃圾产生的容 易腐烂的生物质废弃物</string>
    <string name="wet_include_title">湿垃圾主要包括</string>
    <string name="wet_include_content">剩菜剩饭、瓜皮果核、花卉绿植、过期食品等</string>
    <string name="wet_standard_title">湿垃圾投放要求</string>
    <string name="wet_standard_content">纯流质的食物垃圾，如牛奶等，应直接倒进下水口；有包装物的湿垃圾应将包装物去除后分类投放，包装物请投放到对应的可回收物或干垃圾容器</string>
    <string name="harmful_concept_title">有害垃圾是指</string>
    <string name="harmful_concept_content">对人体健康或者自然环 境造成直接或潜在危害 的废弃物</string>
    <string name="harmful_include_title">有害垃圾主要包括</string>
    <string name="harmful_include_content">废电池、油漆桶、荧光灯管、废药品及其包装物等</string>
    <string name="harmful_standard_title">有害垃圾投放要求</string>
    <string name="harmful_standard_content">投放时请注意轻放；易破损的请连带包装或包裹后轻放；如易挥发，请密封后投放</string>
    <string name="movie">电影</string>
    <string name="zhihu_daily">知乎日报</string>
    <string name="qdaily">好奇心日报</string>
    <string name="qdaily_tab1">NEWS</string>
    <string name="qdaily_tab2">LABS</string>
    <string name="tv">电视剧</string>
    <string name="heat">热度</string>
    <string name="time">时间</string>
    <string name="evaluate">评价</string>
    <string-array name="weekdays">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
</resources>
