<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".textword.view.SmartRobotActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fool_robot"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bg_input"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:hint="@string/chat_input_tip"
        android:imeOptions="actionSearch"
        android:paddingStart="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/bg_input"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear"
        app:layout_constraintStart_toStartOf="@+id/bg_input"
        app:layout_constraintTop_toTopOf="@+id/bg_input" />

    <ImageView
        android:id="@+id/iv_clear"
        android:layout_width="@dimen/dp_30"
        android:layout_height="0dp"
        android:padding="@dimen/dp_4"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bg_input"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/iv_voice"
        app:layout_constraintTop_toTopOf="@+id/bg_input"
        tools:tint="@color/colorPrimaryDark"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_voice"
        android:layout_width="@dimen/dp_30"
        android:layout_height="0dp"
        android:padding="@dimen/dp_2"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_btn_speak_now"
        app:layout_constraintBottom_toBottomOf="@+id/bg_input"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/bg_input"
        app:layout_constraintTop_toTopOf="@+id/bg_input"
        tools:tint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/chat"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_input" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:scrollbars="vertical"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_14"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_chat"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/app_name" />

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@drawable/tool_bar_shadow"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>