<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    tools:context=".dailylife.view.GarbageClassificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garbage_classification"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/bg_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_input"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/garbage_input_hint"
                android:imeOptions="actionSearch"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/bg_input"
                app:layout_constraintEnd_toStartOf="@+id/iv_clear"
                app:layout_constraintStart_toStartOf="@+id/bg_input"
                app:layout_constraintTop_toTopOf="@+id/bg_input" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/dp_10"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/bg_input"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="@+id/bg_input"
                app:layout_constraintTop_toTopOf="@+id/bg_input"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_query"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/query"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bg_input" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlv_garbage_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/btn_query" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/btn_query">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rlv_garbage_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@drawable/tool_bar_shadow"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>